<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/textview_text" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText1"
            android:paddingBottom="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSave" />

            <Button
                android:id="@+id/btnSaveImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_save"
                android:text="@string/btnSave" />

            <ImageButton
                android:id="@+id/btnImg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_save" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/chkAutosave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/chkAutoSave" />

        <CheckBox
            android:id="@+id/chkStar"
            style="?android:attr/starStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkStar" />

        <RadioGroup
            android:id="@+id/rdbGp1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rdb1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rdb1" />

            <RadioButton
                android:id="@+id/rdb2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rdb2" />
        </RadioGroup>


        <ToggleButton
            android:id="@+id/toggle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_title" />

        <ImageView
            android:id="@+id/imageview1"
            android:layout_gravity="center"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_width"
            android:src="@drawable/android" />

    </LinearLayout>
</ScrollView>